  instead of mostly relying on Form. There are also new pre_validate and
  post_validate hooks on subfields, adding a great deal of flexibility when
  dealing with field-level validation. Note that this is an API breaking change
  if you have any subfields that override `Field.validate`. These will need to
  be updated to use the new hooks.

- wtforms.ext.django has been overhauled, both to mirror features and changes
  of the Django 1.0 release, and to add some useful fields for working with
  django ORM data in forms.
 
- the `checker` keyword argument to SelectField, SelectMultipleField, and 
  RadioField has been renamed to `coerce` to reflect the actual functionality
  of this callable.


Version 0.2
-----------
Released January 13th, 2009.

- We have documentation and unit tests!

- Fields now have a `flags` property which contain boolean flags that are set
  either by the field itself or validators being specified on a field. The
  flags can then be used in checks in template or python code.

- Changed the way fields take parameters, they are no longer quasi magic. This
  is a breaking change. Please see the documentation for the new syntax.

- Added optional description argument to Field, accessible on the field as
  `description`. This provides an easy way to define e.g. help text in the same
  place as the form.

- Added new semantics for validators which can stop the validation chain, with
  or without errors.

- Added a regexp validator, and removed the not_empty validator in favour of
  two validators, optional and required. The new validators allow control
  over the validation chain in addition to checking emptiness.

- Renamed wtforms.contrib to wtforms.ext and reorganised wtforms.ext.django.
  This is a breaking change if you were using the django extensions, but should
  only require changing your imports around a little.

- Better support for other frameworks such as Pylons.

Version 0.1
-----------
Released July 25th, 2008.

- Initial release.